--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200,300,600&display=swap" rel="stylesheet">
+    <!-- Javascript -->
+    <script src="/app.js"></script>
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/3c668b9a9f.js" crossorigin="anonymous"></script>
+    <!-- IziToast -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
 </head>
 
 <body>
@@ -26,6 +33,12 @@
                 <li><a href="#productos" class="nav_item">Productos Top</a></li>
                 <li><a href="#contacto" class="nav_item">Haz tu pedido</a></li>
             </nav>
+        </div>
+
+        <div class="cart">
+            <a href="/cart.html"><i class="fas fa-shopping-cart"></i>
+                <span id="cart_count">0</span>
+            </a>
         </div>
     </header>
     <main>
@@ -49,7 +62,7 @@
             </div>
             <div class="box_products">
                 <div class="box_productos_a">
-                    <div class="producto">
+                    <div onclick="addToCart()" class="producto">
                         <img class="nike" src="img/nike1.png" alt="">
                         <div class="producto_detalle">
                             <h3 class="product_descriptión">NIKE MODEL D</h3>
@@ -102,7 +115,7 @@
         </section>
         <section id="contacto">
             <div class="title_contacto">
-                <h1>Haz tú pedido</h1>
+                <h1>Haz tu pedido</h1>
             </div>
             <div class="box_form">
                 <form class="form_contacto" action="">
