Update: Cambios Mayores
Agregado nuevo componente card para los productos.
Mejorado form con validaciones y uso de atributos.
Agregados más tipos de inputs para adicionar variedad dentro del form.
Se mejoran estilos de los diferentes estados de los elementos.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </nav>
         </div>
 
-        <div class="cart">
+        <!-- <div class="cart">
             <a href="/cart.html"><i class="fas fa-shopping-cart"></i>
                 <span id="cart_count">0</span>
             </a>
-        </div>
+        </div> -->
     </header>
     <main>
         <div class="slider">
@@ -62,52 +62,120 @@
             </div>
             <div class="box_products">
                 <div class="box_productos_a">
-                    <div onclick="addToCart()" class="producto">
-                        <img class="nike" src="img/nike1.png" alt="">
-                        <div class="producto_detalle">
-                            <h3 class="product_descriptión">NIKE MODEL D</h3>
-                            <p class="price">$450</p>
+                    <div class="product_container">
+                        <div class="product_img_container">
+                            <img class="product_img" src="./img/nike1.png" alt="">
+                        </div>
+                        <div class="product_description">
+                            <h3>Nike Air 300</h3>
+                            <p class="product_price">$ 1.000.000</p>
+                        </div>
+                        <div class="product_actions">
+                            <button class="button_add_cart" onclick="addToCart(1)">
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                        <div class="product_favorite">
+                            <button class="button_add_favorite" onclick="addToFavorite()">
+                                <i class="fas fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-
-                    <div class="producto">
-                        <img class="nike" src="img/nike2.png" alt="">
-                        <div class="producto_detalle">
-                            <h3 class="product_descriptión">NIKE MODEL D</h3>
-                            <p class="price">$450</p>
+                    <div class="product_container">
+                        <div class="product_img_container">
+                            <img class="product_img" src="./img/nike2.png" alt="">
+                        </div>
+                        <div class="product_description">
+                            <h3>Nike Air 300</h3>
+                            <p>$ 4 620</p>
+                        </div>
+                        <div class="product_actions">
+                            <button class="button_add_cart" onclick="addToCart(1)">
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                        <div class="product_favorite">
+                            <button class="button_add_favorite" onclick="addToFavorite()">
+                                <i class="fas fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-
-                    <div class="producto">
-                        <img class="nike" src="img/nike3.png" alt="">
-                        <div class="producto_detalle">
-                            <h3 class="product_descriptión">NIKE MODEL D</h3>
-                            <p class="price">$450</p>
+                    <div class="product_container">
+                        <div class="product_img_container">
+                            <img class="product_img" src="./img/nike3.png" alt="">
+                        </div>
+                        <div class="product_description">
+                            <h3>Nike Air 300</h3>
+                            <p>$ 4 620</p>
+                        </div>
+                        <div class="product_actions">
+                            <button class="button_add_cart" onclick="addToCart(1)">
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                        <div class="product_favorite">
+                            <button class="button_add_favorite" onclick="addToFavorite()">
+                                <i class="fas fa-heart"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
                 <div class="box_productos_a">
-                    <div class="producto">
-                        <img class="nike" src="img/nike4.png" alt="">
-                        <div class="producto_detalle">
-                            <h3 class="product_descriptión">NIKE MODEL D</h3>
-                            <p class="price">$450</p>
+                    <div class="product_container">
+                        <div class="product_img_container">
+                            <img class="product_img" src="./img/nike4.png" alt="">
+                        </div>
+                        <div class="product_description">
+                            <h3>Nike Air 300</h3>
+                            <p class="product_price">$ 1.000.000</p>
+                        </div>
+                        <div class="product_actions">
+                            <button class="button_add_cart" onclick="addToCart(1)">
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                        <div class="product_favorite">
+                            <button class="button_add_favorite" onclick="addToFavorite()">
+                                <i class="fas fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-
-                    <div class="producto">
-                        <img class="nike" src="img/nike5.png" alt="">
-                        <div class="producto_detalle">
-                            <h3 class="product_descriptión">NIKE MODEL D</h3>
-                            <p class="price">$450</p>
+                    <div class="product_container">
+                        <div class="product_img_container">
+                            <img class="product_img" src="./img/nike5.png" alt="">
+                        </div>
+                        <div class="product_description">
+                            <h3>Nike Air 300</h3>
+                            <p class="product_price">$ 1.000.000</p>
+                        </div>
+                        <div class="product_actions">
+                            <button class="button_add_cart" onclick="addToCart(1)">
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                        <div class="product_favorite">
+                            <button class="button_add_favorite" onclick="addToFavorite()">
+                                <i class="fas fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-
-                    <div class="producto">
-                        <img class="nike" src="img/nike6.png" alt="">
-                        <div class="producto_detalle">
-                            <h3 class="product_descriptión">NIKE MODEL D</h3>
-                            <p class="price">$450</p>
+                    <div class="product_container">
+                        <div class="product_img_container">
+                            <img class="product_img" src="./img/nike6.png" alt="">
+                        </div>
+                        <div class="product_description">
+                            <h3>Nike Air 300</h3>
+                            <p class="product_price">$ 1.000.000</p>
+                        </div>
+                        <div class="product_actions">
+                            <button class="button_add_cart" onclick="addToCart(1)">
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                        <div class="product_favorite">
+                            <button class="button_add_favorite" onclick="addToFavorite()">
+                                <i class="fas fa-heart"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -120,16 +188,32 @@
             <div class="box_form">
                 <form class="form_contacto" action="">
                     <label>¿Cuál es tu nombre?</label>
-                    <input class="input_form" type="text">
+                    <input class="input_form" type="text" required>
 
                     <label>¿Cuál es tu correo?</label>
-                    <input class="input_form" type="text">
+                    <input type="email" class="input_form" type="text" required>
 
                     <label>¿Qué modelo te gustó?</label>
-                    <input class="input_form" type="text">
+                    <!-- <input class="input_form" type="text"> -->
+                    <select class="input_form" name="model_name" id="model_name" required>
+                        <!-- Option with random names every one -->
+                        <option value="" selected disabled hidden>Elije un producto</option>
+                        <option value="Nike Air 300">Nike Air 300</option>
+                        <option value="Nike Air 300">Nike Air 300</option>
+                        <option value="Nike Air 300">Nike Air 300</option>
+                        <option value="Nike Air 300">Nike Air 300</option>
+                        <option value="Nike Air 300">Nike Air 300</option>
+                        <option value="Nike Air 300">Nike Air 300</option>
+                    </select>
 
                     <label>Añade algún detalle</label>
-                    <textarea class="text_area_form"></textarea>
+                    <textarea class="text_area_form" required></textarea>
+
+                    <!-- Terms -->
+                    <div>
+                        <input type="checkbox" name="terms" id="terms" required>
+                        <label for="terms">Acepto los términos y condiciones</label>
+                    </div>
 
                     <input class="input_submit" type="submit" name="Enviar">
                 </form>
